<resources>
    <string name="app_name">My Application</string>
    <string name="packageName">com.example.myapplication</string>
    <string name="kkk">如果</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_sy">首页</string>
    <string name="tab_cp">产品</string>
    <string name="tab_wk">挖矿</string>
    <string name="tab_yy">应用</string>
    <string name="tab_wd">我的</string>
    <string name="tab_zp">算力租凭</string>
    <string name="tab_sl">云算力</string>
    <string name="tab_yjs">已结束</string>
    <string name="tab_wkz">挖矿中</string>
    <string name="tab_dsj">待上架</string>
    <string name="dbcz">代币充值</string>
    <string name="xzbz">选择币种</string>
    <string name="fzczdz">复制充值地址</string>
    <string name="cbdz">充币地址</string>
    <string name="title_dbcz">*请勿向上述地址充值非USDT资产，网络节点确认后到 账*最小充值数量1.00000000,小于最小数量将不会上账且无法退回*请务必确认电脑及浏览器安全，防止信 息被篡改或泄露</string>
    <string name="lqjf">领取积分</string>
    <string name="gzsm">规则说明</string>
    <string name="kyjf">可用积分</string>
    <string name="zfwzjf">做任务赚积分</string>
    <string name="lishi">历史</string>
    <string name="qwc">去完成</string>
    <string name="yqhyzc">邀请好友注册</string>
    <string name="yqhygmslb">邀请好友购买算力包</string>
    <string name="fxlj">分享链接</string>
    <string name="mtsxw">每天上限5点</string>
    <string name="mtsxshi">每天上限10点</string>
    <string name="gfgg">官方公告</string>
    <string name="hyz">会员制</string>
    <string name="dengji">等级</string>
    <string name="xssy">享受收益</string>
    <string name="sjljjf">升级累计积分</string>
    <string name="jfdh">积分兑换</string>
    <string name="jfhb">积分月报</string>
    <string name="dqjf">当前积分</string>
    <string name="dhjl">兑换记录</string>
    <string name="dhcg">兑换成功</string>
    <string name="jfhz">积分互转</string>
    <string name="yhm">用户名</string>
    <string name="qsryhm">请输入用户名</string>
    <string name="shuliang">数量</string>
    <string name="qsrsl">请输入数量</string>
    <string name="huzhuan">互转</string>
    <string name="dyyb">当月月报</string>
    <string name="kjxq">矿机详情</string>
    <string name="m_slzs">算力总数：</string>
    <string name="m_sldj">算力单价：</string>
    <string name="m_slze">算力总额：</string>
    <string name="m_yjmrcc">预计每日产出：</string>
    <string name="m_slyxq">算力有效期：</string>
    <string name="m_sjsj">上架时间：</string>
    <string name="sljs">算力介绍</string>
    <string name="tian">天</string>
    <string name="title_sljs">BitForce所售合约的挖矿收益根据BTC.com公示的全网每T每天理论收益进行计算，上架后次曰零点结算当天的挖矿收益，实际到账将需要支付相应费用(包括电费、租赁费)，a.租赁模式下，挖矿实际所获将与平台五五分成作为租赁费。b.非租赁模式下，挖矿实际所获将需要支付10%管理费、5%维修费。具体以算力合约参数为 准。算力租赁合约到期后，算力押金将自动退回 到账户资产中。</string>
    <string name="fxts">风险提示</string>
    <string name="title_fxts">请根据自身实际情况谨慎选择算力类型。数字货 币价格涨跌、全网算力难度提升等因素均会导致 您持有算力的挖矿收益波动。预计收益是根据当 前难度估算，实得收益将根据合约周期内矿场实 际获得的数字资产总量进行分发，实际收益与预 计收益存在偏差可能。</string>
    <string name="mzsm">免责申明</string>
    <string name="title_mzsm">BitForce不对用户获得的数字资产进行精准承 诺，挖矿收益受市场行情波动影响非恒定，合约 预计回报率仅供参考，用户应自己独立判断后做出决策，自愿租赁算力合约进行数字资产投资的 用户，其行为产生的投资风险由用户自行承担。</string>
    <string name="wytybydxy">我已同意并阅读协议</string>
    <string name="qsrzhmm">请输入账号密码</string>
    <string name="dlzh">登录账号</string>
    <string name="w_hmyzh">还没有BITFORCE账号?</string>
    <string name="ljzc">立即注册</string>
    <string name="wjmm">忘记密码</string>
    <string name="jtzw">简体中文</string>
    <string name="bfzhzc">BitForce账号注册</string>
    <string name="qsryhmc">请输入用户名称</string>
    <string name="qsrdhhm">请输入电话号码</string>
    <string name="qsrsjyzm">请输入手机验证码</string>
    <string name="hqyzm">获取验证码</string>
    <string name="qsrdlmm">请输入登录密码</string>
    <string name="zcsrdlmm">再次输入登录密码</string>
    <string name="qsryqmbt">请输入邀请码(必填)</string>
    <string name="qytybydbfxy">我已同意并阅读[BitForce]协议</string>
    <string name="zczh">注册账号</string>
    <string name="w_yyzh">已有账号？</string>
    <string name="ljdl">立即登录</string>
    <string name="czdlmm">重置登录密码</string>
    <string name="qrcz">确认重置</string>
    <string name="aqsz">安全设置</string>
    <string name="xgmm">修改密码</string>
    <string name="tcdl">退出登录</string>
    <string name="slxq">算力详情</string>
    <string name="zrcl">昨日产量</string>
    <string name="ljcl">累计产量</string>
    <string name="sqtb">申请提币</string>
    <string name="txdz">提现地址</string>
    <string name="quanbu">全部</string>
    <string name="ktbye">可提币余额</string>
    <string name="sxf">手续费</string>
    <string name="xyb">下一步</string>
    <string name="title_sqtb">*为保障您的资金安全，提现申请后请耐心等候系统审核*请务必确认电脑及浏览器安全，防止信息被篡改或泄露</string>
    <string name="sysljl">扫一扫领奖励</string>
    <string name="title_yqhy">分享二维码或复制发送邀请链接给好友，获得奖励</string>
    <string name="kghy">矿工好友</string>
    <string name="kgsl">矿工算力</string>
    <string name="jrcz">今日产值</string>
    <string name="ren">人</string>
    <string name="yjfk">意见反馈</string>
    <string name="sdsmb">说点什么吧...</string>
    <string name="tjfk">提交反馈</string>
    <string name="zcmx">资产明细</string>
    <string name="m_keyong">可用：</string>
    <string name="chongzhi">充值</string>
    <string name="tixian">提现</string>
    <string name="mingxi">明细</string>
    <string name="m_slsx">算力生效:</string>
    <string name="m_sldq">算力到期:</string>
    <string name="dianfei">电费</string>
    <string name="xrzxmxlyc">新人专享-每人限领一次</string>
    <string name="fyqm">费用全免</string>
    <string name="lyzp">0元租凭</string>
    <string name="xrzx">新人专享</string>
    <string name="yjcc">预计产出</string>
    <string name="ljlq">立即领取</string>
    <string name="qwsl">全网算力</string>
    <string name="zwsj">暂无数据</string>
    <string name="wakuang">挖矿</string>
    <string name="zsl">总算力</string>
    <string name="wode">我的</string>
    <string name="zhzczh">账户资产折合</string>
    <string name="cjwt">常见问题</string>
    <string name="yysd">语言设定</string>
    <string name="yqhy">邀请好友</string>
    <string name="zskf">专属客服</string>
    <string name="dwhysl">单份合约算力</string>
    <string name="qgfs">起购分数</string>
    <string name="m_xsjzdjs">销售截止倒计时：</string>
    <string name="cchbl">产出回报率</string>
    <string name="jifen">积分</string>
    <string name="jfz">积分值</string>
    <string name="ljf">领积分</string>
    <string name="ylxm">娱乐项目</string>
    <string name="ggl">刮刮乐</string>
    <string name="zhuanpan">转盘</string>
    <string name="shaizi">筛子</string>
    <string name="ttd">天天斗</string>
    <string name="gengduo">更多</string>
    <string name="yygl">应用管理</string>
    <string name="szzcgl">数字资产管理</string>
    <string name="zhifu">支付</string>
    <string name="shangcheng">商城</string>
    <string name="sjrj">社交软件</string>
    <string name="jys">交易所</string>
    <string name="youxi">游戏</string>
    <string name="ljzp">立即租赁</string>
    <string name="w_sftcdl">是否退出登录？</string>
    <string name="quxiao">取消</string>
    <string name="queren">确认</string>
    <string name="xzyy">选择语言</string>
    <string name="ftzw">繁體中文</string>
    <string name="title_zp">确认租赁 AntminerS17系列360天算力租赁合约？</string>
    <string name="tishi_qtxsjhm">请填写手机号码或邮箱</string>
    <string name="text_cxhq">重新获取</string>
    <string name="fscg">发送成功</string>
    <string name="lcsrdmmbyz">两次输入的密码不一致</string>
    <string name="qgxyydxy">请勾选已阅读协议</string>
</resources>
