<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.myapplication.yinyong.JfHuZhuanActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_18"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:src="@mipmap/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_17"
            android:textColor="@color/black"
            android:text="@string/jfhz"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/jiajian_bg"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_110"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/sy_linesbg"
            android:layout_centerInParent="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:text="@string/yhm"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:hint="@string/qsryhm"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:text="@string/shuliang"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:hint="@string/qsrsl"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/jiajian_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_50"
            android:background="@drawable/cengses_bg"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/huzhuan"/>
    </RelativeLayout>
</LinearLayout>
