<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.myapplication.shouye.activity.KjDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <ImageView
                    android:id="@+id/image_back"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_18"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:src="@mipmap/back"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_17"
                    android:textColor="@color/black"
                    android:text="@string/kjxq"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/sy_linesbg"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_210" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/sy_linesbg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/huise"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dp_15"
                android:text="@string/cchbl"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/black"
                    android:text="新用户专享7天S17系列（10T）"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/cengse"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"
                    android:text="54~166%"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:text="@string/m_slzs"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true">

                    <TextView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:textColor="@color/huise"
                        android:textSize="@dimen/sp_16"
                        android:text="—"
                        android:gravity="center"
                        android:background="@drawable/jiajian_bg"/>

                    <TextView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:textColor="@color/huise"
                        android:textSize="@dimen/sp_16"
                        android:text="10"
                        android:gravity="center"
                        android:layout_marginLeft="@dimen/dp_3"
                        android:background="@drawable/jiajian_bg"/>

                    <TextView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:textColor="@color/huise"
                        android:textSize="@dimen/sp_20"
                        android:text="+"
                        android:gravity="center"
                        android:layout_marginLeft="@dimen/dp_3"
                        android:background="@drawable/jiajian_bg"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:text="@string/m_sldj"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/anniu_black"
                    android:layout_alignParentRight="true"
                    android:text="0.00000000 USDT"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:text="@string/m_slze"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/anniu_black"
                    android:layout_alignParentRight="true"
                    android:text="0.00 USDT"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:text="@string/m_yjmrcc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/cengse"
                    android:layout_alignParentRight="true"
                    android:text="=0.00017230 BTC"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/sy_linesbg"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:text="@string/m_sjsj"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/anniu_black"
                    android:layout_alignParentRight="true"
                    android:text="2020-02-29"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:text="@string/m_slyxq"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/anniu_black"
                        android:text="7"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/anniu_black"
                        android:text="@string/tian"/>
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/sy_linesbg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/sljs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="@dimen/dp_8"
                android:text="@string/title_sljs"
                android:textColor="@color/huise"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/fxts"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="@dimen/dp_8"
                android:text="@string/title_fxts"
                android:textColor="@color/huise"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/mzsm"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="@dimen/dp_8"
                android:text="@string/title_mzsm"
                android:textColor="@color/huise"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_25"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@mipmap/zc_unselect"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cengse"
                    android:textSize="@dimen/sp_16"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_gravity="center"
                    android:text="@string/wytybydxy"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/register_bg"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/black"
                android:text="@string/ljlq"
                android:layout_marginBottom="@dimen/dp_20"
                android:gravity="center"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
