<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dlbj"
    tools:context="com.example.myapplication.begin.activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/dl_bj"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_300"
        android:layout_alignParentBottom="true"
        android:background="@color/dlbj"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_230"
        android:scaleType="centerCrop"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:src="@mipmap/dl_tuan"/>

    <LinearLayout
        android:id="@+id/lin_yuYan"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_yuYan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/black"
            android:text="@string/jtzw"/>

        <ImageView
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_5"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_5"
            android:src="@mipmap/jt_xia"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_170"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lin_quHao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/black"
                android:text="China +86"/>

            <ImageView
                android:layout_width="@dimen/dp_10"
                android:layout_height="@dimen/dp_5"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_5"
                android:src="@mipmap/jt_xia"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:background="@drawable/baise_bg"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:layout_centerInParent="true"
                android:background="@color/line"/>

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@null"
                android:textColor="@color/black"
                android:hint="@string/qsrdhhm"
                android:gravity="center"
                android:textSize="@dimen/sp_14"/>

            <EditText
                android:id="@+id/ed_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@null"
                android:textColor="@color/black"
                android:hint="@string/qsrzhmm"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="@dimen/sp_14"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rela_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/cengse_bg"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:text="@string/dlzh"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textStyle="bold"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_11"
                android:textColor="@color/huise"
                android:textStyle="bold"
                android:text="@string/w_hmyzh"/>

            <TextView
                android:id="@+id/text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_11"
                android:textColor="@color/cengse"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/ljzc"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/cengse"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/wjmm"/>
    </LinearLayout>

</RelativeLayout>
